syntax = "proto3";
package proto;

option go_package = "mailinglist/proto";

message Subscriber{
    int64 id = 1;
    string email =2;
    int64 confirmed_at =3;
    bool opt_out=4;
}

message CreateSubscriberRequest { string email_addr =1; }
message GetSubscriberRequest { string email_addr =1; }
message UpdateSubscriberRequest { Subscriber subscriber =1; }
message CancelSubscriptionRequest { string email_addr =1; }


message SubscriberResponse { optional Subscriber subscriber =1; }


service MailingListService {
    rpc CreateSubscriber(CreateSubscriberRequest) returns (SubscriberResponse){}
    rpc GetSubscriber(GetSubscriberRequest) returns (SubscriberResponse){}
    rpc UpdateSubscriber(UpdateSubscriberRequest) returns (SubscriberResponse){}
    rpc CancelSubscription(CancelSubscriptionRequest) returns (SubscriberResponse){}
}
